# education_suger

./: .gitignore  LockingScrew.step  README.md  buggy.md  cheat_sheet_latex.md  cheat_sheet_latex.tex  config_function.tex  eleves.tex  macros.sty  mypackages.sty  programme_1er_cours.tex  tableau_de_bord_de_suivi_des_competences_du_socle_622033.xlsx  test.tex
04_outils_pedago/: liste_outils.md
05_gestion_classe/: parents_profs_3eme_ci.tex
06_toolbox/: blank_page.tex  (+8 more)
09_coding/: .env  README.md  pyproject.toml  requirements.txt
09_coding/config/: settings.py
09_coding/data/: fiche_1èreSTD2A_5-Mai-2025.tex  input  output
09_coding/data/draft/: chatgpt_prompts_draft.py
09_coding/src/: config.py  main.py  test.py  test_api.py
09_coding/src/archived/: correction.py
09_coding/src/models/: __init__.py
09_coding/src/utils/: chatgpt_prompts.py  correction.py  helpers.py  image_processing.py  latex_generator.py  latex_parser.py  prompts.py
09_coding/src/utils/correction/: fiche_1èreSTD2A_5-Mai-2025.tex  from_image.py  from_latex.py  packages.tex
09_coding/src/utils/draft/: correction_logic.py  structure_projet.txt
09_coding/src/utils/meta/: correction_framework.py
09_coding/src/utils/prompts/: latex_prompts.py
09_coding/src/utils/prompts/from_latex/: latex_prompt_correction.md  latex_prompt_template.md  latex_tache_extraction_exercices.md  latex_tache_extraction_exercices_clean.md
09_coding/templates/: contraintes_physique.md  template_correction.tex
09_coding/tests/: test_correction_logic.py  test_image_processing.py  test_latex_generator.py
(+304 files in other folders)
